--- a/collarbot.service
+++ b/collarbot.service
@@ -6,6 +6,7 @@ After=network.target
 [Service]
 User=nobody
 ExecStart=/usr/bin/python3 /opt/collarbot/collarbot.py
+Nice=-10
 
 [Install]
 WantedBy=multi-user.target
