--- a/collarbot.service
+++ b/collarbot.service
@@ -7,6 +7,7 @@ After=network.target
 User=nobody
 ExecStart=/usr/bin/python3 /opt/collarbot/collarbot.py
 Nice=-5
+ExecStartPre=/bin/sleep 15
 
 [Install]
 WantedBy=multi-user.target
